LPS-77699 Update Translations

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -11740,7 +11740,7 @@ password-policy-enabled=Парола правила разрешени (Automati
 password-policy-enabled-help=Задайте това на true да използвате правилата за пароли на LDAP вместо правилата за пароли за портала. Ако е вярно, възможно е генерираните от портала пароли няма да отговарят на правилата на LDAP. Вижте "passwords.regexptoolkit.*" свойства за подробности относно конфигурирането на RegExpToolkit за генериране на тези пароли. Имайте предвид, че ако това е разрешено, порталът няма да проверява за валидни пароли, пароли с изтекъл срок или потребители, които са блокирани. Това сега се обработва от правилата за пароли на LDAP сървъра. (Automatic Translation)
 password-recovery-is-disabled=Възстановяване на паролата е забранено. (Automatic Translation)
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
-password-reminder=Password Reminder (Automatic Copy)
+password-reminder=Напомняне на парола
 password-reset-notification=Нотификация за промяна на паролата
 password-reset-required=Изисква се ресетиране на паролата
 password-sent-email=Писмо за изпратена парола
