--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -11742,7 +11742,7 @@ password-policy-enabled=Política de contrasenya habilitada
 password-policy-enabled-help=Establiu això en cert per utilitzar la política de contrasenyes d'LDAP en comptes de la política de contrasenyes del portal. Si s'estableix en cert, és possible que les contrasenyes generades pel portal no coincideixin amb la política d'LDAP. Consulteu les propietats de "passwords.regexptoolkit.*" per obtenir més informació sobre com configurar RegExpToolkit en generar aquestes contrasenyes. Tingueu en compte que, si habiliteu això, el portal no comprovarà contrasenyes vàlides, contrasenyes caducades ni usuaris bloquejats. Ara, això s'administra amb la política de contrasenyes del servidor LDAP.
 password-recovery-is-disabled=La recuperació de contrasenyes està desactivada.
 password-recovery-question-and-answer=Pregunta i resposta de recuperació de contrasenya
-password-reminder=Password Reminder (Automatic Copy)
+password-reminder=Recordatori de la contrasenya
 password-reset-notification=Confirmació del restabliment de la contrasenya
 password-reset-required=Canvi de contrasenya obligatori
 password-sent-email=Correu d'enviament de la contrasenya
