--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -11742,7 +11742,7 @@ password-policy-enabled=Kennwortrichtlinie aktiviert
 password-policy-enabled-help=Aktivieren Sie diese Einstellung, um LDAPs Kennwortrichtlinie zu nutzen statt der Kennwortrichtlinie des Portals. Ist diese Einstellung aktiviert, ist es möglich, dass die vom Portal generierten Kennwörter der LDAP-Richtlinie nicht entsprechen. Einzelheiten zum Konfigurieren von RegExpToolkit beim Generieren dieser Kennwörter finden Sie in den Eigenschaften "passwords.regexptoolkit". Beachten Sie bitte, dass das Portal nicht nach gültigen Kennwörtern, abgelaufenen Kennwörtern oder Benutzern, die gesperrt sind, sucht, wenn diese Option aktiviert ist. Das wird nun von der Kennwortrichtlinie des LDAP-Servers ausgeführt.
 password-recovery-is-disabled=Das Zurücksetzen von Kennwörtern ist deaktiviert.
 password-recovery-question-and-answer=Frage und Antwort für Kennwortwiederherstellung
-password-reminder=Password Reminder (Automatic Copy)
+password-reminder=Kennworterinnerung
 password-reset-notification=E-Mail: Kennwort zurückgesetzt
 password-reset-required=Kennwortrücksetzung erforderlich
 password-sent-email=E-Mail: Kennwort versendet
