--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -11740,7 +11740,7 @@ password-policy-enabled=Η πολιτική κωδικού πρόσβασης ε
 password-policy-enabled-help=Ορίστε αυτήν την επιλογή στην πραγματικότητα για να χρησιμοποιήσετε την πολιτική κωδικού πρόσβασης του LDAP αντί για την πολιτική κωδικού πρόσβασης πύλης. Εάν οριστεί σε true, είναι πιθανό ότι οι κωδικοί πρόσβασης που δημιουργούνται από την πύλη δεν θα ταιριάζουν με την πολιτική LDAP. Ανατρέξτε στις ιδιότητες "passwords.regexptoolkit.*" για λεπτομέρειες σχετικά με τη ρύθμιση παραμέτρων του RegExpToolkit κατά τη δημιουργία αυτών των κωδικών πρόσβασης. Σημειώστε ότι εάν αυτό είναι ενεργοποιημένο, η πύλη δεν θα ελέγξει για έγκυρους κωδικούς πρόσβασης, ληγμένους κωδικούς πρόσβασης ή χρήστες που είναι κλειδωμένοι. Αυτό αντιμετωπίζεται τώρα από την πολιτική κωδικού πρόσβασης του διακομιστή LDAP. (Automatic Translation)
 password-recovery-is-disabled=Η ανάκτηση κωδικού πρόσβασης είναι απενεργοποιημένη. (Automatic Translation)
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
-password-reminder=Password Reminder (Automatic Copy)
+password-reminder=Υπενθύμιση κωδικού πρόσβασης
 password-reset-notification=Ειδοποίηση μηδενισμού κωδικού πρόσβασης
 password-reset-required=Απαιτείται μηδενισμός κωδικού πρόσβασης
 password-sent-email=Email αποστολής κωδικού πρόσβασης
