--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -11739,7 +11739,7 @@ password-policy-enabled=Salasanakäytännöt Käytössä
 password-policy-enabled-help=Aseta tämä todeksi käyttäksesi LDAP:n salasanakäytäntöjä portaalin salasanakäytäntöjen sijaan. Jos tämä on asetettu todeksi, on mahdollista, että portaalin luomat salasanat eivät vastaa LDAP-käytäntöjä. Katso "passwords.regexptoolkit.*"-ominaisuuksia saadaksesi tietoja, miten määrittää RegExpToolkit näiden salasanojen luomiseksi. Huomaa, että jos tämä on käytössä, portaali ei tarkasta kelvollisia salasanoja, vanhentuneita salasanoja tai lukittuja käyttäjiä. Sen hoitavat nyt LDAP-palvelimen salasanakäytännöt.
 password-recovery-is-disabled=Salasanan palautus ei ole päällä.
 password-recovery-question-and-answer=Salasanan palautuskysymys ja -vastaus
-password-reminder=Password Reminder (Automatic Copy)
+password-reminder=Salasanan muistuttaja
 password-reset-notification=Salasanan muutosilmoitus
 password-reset-required=Salasanan nollaus vaadittu
 password-sent-email=Salasana lähetetty sähköposti
