--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -11741,7 +11741,7 @@ password-policy-enabled=Criteri password abilitati (Automatic Translation)
 password-policy-enabled-help=Impostare questa impostazione su true per utilizzare i criteri password di LDAP anziché i criteri password del portale. Se impostato su true, è possibile che le password generate dal portale non corrispondano ai criteri LDAP. Per informazioni dettagliate sulla configurazione di RegExpToolkit nella generazione di queste password, vedere le proprietà "passwords.regexptoolkit.*". Si noti che se questa opzione è abilitata, il portale non controllerà la presenza di password valide, password scadute o utenti bloccati. Questo problema viene ora gestito dai criteri password del server LDAP. (Automatic Translation)
 password-recovery-is-disabled=Recupero della password disabilitato
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
-password-reminder=Password Reminder (Automatic Copy)
+password-reminder=Recupero password
 password-reset-notification=Notifica Password Resettata
 password-reset-required=Richiedi il reset della password al prossimo accesso
 password-sent-email=Password spedita via email
