--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -11740,7 +11740,7 @@ password-policy-enabled=비밀번호 정책 활성
 password-policy-enabled-help=포털 비밀번호 정책 대신 LDAP의 비밀번호 정책을 사용하려면 이를 true로 설정하십시오. true로 설정하면 포털 생성 비밀번호가 LDAP 정책과 일치하지 않을 수 있습니다. 이러한 암호를 생성할 때 RegExpToolkit을 구성하는 방법에 대한 자세한 내용은 "passwords.regexptoolkit.*" 속성을 참조하십시오. 활성화된 경우 포털은 유효한 비밀번호, 만료된 비밀번호 또는 잠긴 사용자를 확인하지 않습니다. 이것은 이제 LDAP 서버의 암호 정책에 의해 처리됩니다.
 password-recovery-is-disabled=비밀번호 복구가 비활성되었습니다.
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
-password-reminder=Password Reminder (Automatic Copy)
+password-reminder=암호 신호
 password-reset-notification=암호는 통보를 변화했다
 password-reset-required=암호 리셋은 요구했다
 password-sent-email=암호는 전자 우편을 보냈다
