--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -11740,7 +11740,7 @@ password-policy-enabled=Passordpolicy aktivert (Automatic Translation)
 password-policy-enabled-help=Sett dette til sann hvis du vil bruke LDAPs passordpolicy i stedet for policyen for portalpassord. Hvis sann er angitt, er det mulig at portalgenererte passord ikke samsvarer med LDAP-policyen. Se egenskapene "passwords.regexptoolkit.*" hvis du vil ha mer informasjon om hvordan du konfigurerer RegExpToolkit ved generering av disse passordene. Vær oppmerksom på at hvis dette er aktivert, vil ikke portalen se etter gyldige passord, utløpte passord eller brukere som er låst ute. Dette håndteres nå av passordpolicyen for LDAP-serveren. (Automatic Translation)
 password-recovery-is-disabled=Passordgjenoppretting er deaktivert.
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
-password-reminder=Password Reminder (Automatic Copy)
+password-reminder=Passordpåminner
 password-reset-notification=Tilbakestilling av passord
 password-reset-required=Det er nødvendig å tilbakestille passord
 password-sent-email=E-post med passord
