--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -11743,7 +11743,7 @@ password-policy-enabled=Wachtwoordbeleid ingeschakeld
 password-policy-enabled-help=Stel dit in als 'waar' om het LDAP-wachtwoordbeleid te gebruiken in plaats van het wachtwoordbeleid van de portal. Indien ingesteld als 'waar', is het mogelijk dat wachtwoorden aangemaakt door de portal niet voldoen aan het LDAP-beleid. Zie de eigenschappen 'passwords.regexptoolkit.*' voor meer informatie over het configureren van RegExpToolkit bij het genereren van deze wachtwoorden. Let wel: als dit is ingeschakeld, zal de portal niet controleren op geldige of verlopen wachtwoorden, of uitgesloten gebruikers. Dit wordt nu behandeld door het wachtwoordbeleid van de LDAP-server.
 password-recovery-is-disabled=Wachtwoordherstel is uitgeschakeld.
 password-recovery-question-and-answer=Vraag en antwoord voor wachtwoordherstel
-password-reminder=Password Reminder (Automatic Copy)
+password-reminder=Wachtwoordherinnering
 password-reset-notification=Melding: 'Wachtwoord gereset'
 password-reset-required=Resetten wachtwoord vereist
 password-sent-email=E-mail: 'Wachtwoord verzonden'
