--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -11740,7 +11740,7 @@ password-policy-enabled=Política de senha habilitada
 password-policy-enabled-help=Definir como verdadeiro para usar a política de senha do LDAP ao invés da política de senha do portal. Se definido como verdadeiro, é possível que as senhas geradas pelo portal não coincidam com a política do LDAP. Consulte as propriedades "passwords.regexptoolkit.*" para obter mais detalhes sobre a configuração de RegExpToolkit durante a geração dessas senhas. Observe que, se habilitado, o portal não validará a senha, senhas expiradas ou se os usuários estão bloqueados. Isso não é tratado pela política de senha do servidor LDAP.
 password-recovery-is-disabled=Recuperação de senha está desabilitada.
 password-recovery-question-and-answer=Pergunta e resposta de recuperação de senha
-password-reminder=Password Reminder (Automatic Copy)
+password-reminder=Lembrete de senha
 password-reset-notification=Notificação de Recuperação de Senha
 password-reset-required=Mudança de Senha Obrigatória
 password-sent-email=Email com senha enviado
@@ -18153,7 +18153,7 @@ upload-a-logo-for-the-organization-pages-that-is-used-instead-of-the-default-ent
 upload-a-logo-for-the-private-pages-that-is-used-instead-of-the-default-enterprise-logo=Faça upload da logo para as páginas privadas que são usadas ao invés da logo padrão da empresa.
 upload-a-logo-for-the-public-pages-that-is-used-instead-of-the-default-enterprise-logo=Faça upload da logo para as páginas públicas que são usadas ao invés da logo padrão da empresa.
 upload-a-war-file-to-install-a-layout-template,-portlet,-or-theme=Faça upload de um arquivo WAR para instalar um layout template, portlet ou tema.
-upload-a-x-no-larger-than-x-mb=Envie um(a) {0} não maior do que {0} MB.
+upload-a-x-no-larger-than-x-mb=Envie um(a) {0} não maior do que {1} MB.
 upload-another-file=Fazer o upload de outro arquivo
 upload-certificate=Carregar Certificado
 upload-completed=Upload completo
