--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -11742,7 +11742,7 @@ password-policy-enabled=Política de senha ativada (Automatic Translation)
 password-policy-enabled-help=Defina isso como true para usar a política de senha do LDAP em vez da política de senha do portal. Se definido como verdadeiro, é possível que as senhas geradas pelo portal não coinvam com a política LDAP. Consulte as propriedades "passwords.regexptoolkit.*" para obter detalhes sobre a configuração do RegExpToolkit na geração dessas senhas. Observe que se isso estiver ativado, o portal não verificará senhas válidas, senhas expiradas ou usuários bloqueados. Isso agora é tratado pela política de senha do servidor LDAP. (Automatic Translation)
 password-recovery-is-disabled=A recuperação de senha está desabilitada.
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
-password-reminder=Password Reminder (Automatic Copy)
+password-reminder=Lembrete de Senha
 password-reset-notification=Notificação de Recuperação de Senha
 password-reset-required=Necessário Alterar Palavra-chave
 password-sent-email=Email de Senha Enviada
