--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -11740,7 +11740,7 @@ password-policy-enabled=Chính sách Mật khẩu Đã bật (Automatic Translat
 password-policy-enabled-help=Đặt điều này thành đúng để sử dụng chính sách mật khẩu của LDAP thay vì chính sách mật khẩu cổng thông tin. Nếu được đặt thành true, có thể mật khẩu do cổng thông tin tạo ra sẽ không khớp với chính sách LDAP. Xem thuộc tính "passwords.regexptoolkit.*" để biết chi tiết về cấu hình RegExpToolkit trong việc tạo các mật khẩu này. Lưu ý rằng nếu điều này được bật, cổng thông tin sẽ không kiểm tra mật khẩu hợp lệ, mật khẩu hết hạn hoặc người dùng bị khóa. Điều này bây giờ được xử lý bởi chính sách mật khẩu của máy chủ LDAP. (Automatic Translation)
 password-recovery-is-disabled=Tính năng khôi phục mật khẩu đang bị vô hiệu hóa.
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
-password-reminder=Password Reminder (Automatic Copy)
+password-reminder=Câu hỏi khôi phục mật khẩu
 password-reset-notification=Thông báo mật khẩu được thiết lập lại
 password-reset-required=Yêu cầu tạo lại mật khẩu
 password-sent-email=Mật khẩu gửi Email
