--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -11742,7 +11742,7 @@ password-policy-enabled=启用密码策略
 password-policy-enabled-help=将其设置为True，使用LDAP的密码策略而不是门户密码策略。如果设置为True，则门户生成的密码有可能与LDAP策略不匹配。有关配置RegExpToolkit生成这些密码的详细信息，请参阅"passwords.regexptoolkit.*"属性。请注意，如果启用此功能，门户网站将不会检查有效密码、过期密码或锁定的用户。现在由LDAP服务器的密码策略处理。
 password-recovery-is-disabled=密码恢复功能已经被关闭.
 password-recovery-question-and-answer=密码恢复问答
-password-reminder=Password Reminder (Automatic Copy)
+password-reminder=密码提示
 password-reset-notification=密码重置通知
 password-reset-required=必须重新设置密码
 password-sent-email=发送密码的电子邮件
