--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -11741,7 +11741,7 @@ password-policy-enabled=啟用密碼政策
 password-policy-enabled-help=將此設置為真實，以使用LDAP的密碼策略而不是門戶密碼策略。如果設置為真，則門戶生成的密碼可能與LDAP策略不匹配。有關在生成這些密碼時配置註冊開發技術的詳細資訊，請參閱"密碼.regexptoolkit.*"屬性。請注意，如果啟用此功能，門戶將不會檢查是否存在有效的密碼、過期密碼或被鎖定的使用者。現在由LDAP伺服器的密碼策略處理此問題。 (Automatic Translation)
 password-recovery-is-disabled=密碼回復已停用。
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
-password-reminder=Password Reminder (Automatic Copy)
+password-reminder=密碼提示
 password-reset-notification=密碼重設通知
 password-reset-required=密碼重設是必須
 password-sent-email=密碼送出電子郵件
