--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_CO.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_CO.properties
@@ -11742,7 +11742,7 @@ password-policy-enabled=Política de contraseñas habilitada
 password-policy-enabled-help=Establezca esta opción en verdadero para usar la política de contraseñas de LDAP, en lugar de usar la política de contraseñas del portal. Si se establece en verdadero, es posible que las contraseñas generadas por el portal no coincidan con la política de LDAP. Consulte las propiedades de "passwords.regexptoolkit.*" para obtener más información sobre cómo configurar RegExpToolkit al generar estas contraseñas. Tenga en cuenta que, si habilita esto, el portal no comprobará contraseñas válidas, contraseñas expiradas ni usuarios bloqueados. Ahora, esto se administra con la política de contraseñas del servidor LDAP.
 password-recovery-is-disabled=Se ha deshabilitado la recuperación de contraseñas
 password-recovery-question-and-answer=Pregunta y respuesta de recuperación de contraseña
-password-reminder=Password Reminder (Automatic Copy)
+password-reminder=Recordatorio de la contraseña
 password-reset-notification=Notificación del cambio de contraseña
 password-reset-required=Cambio de contraseña requerido
 password-sent-email=Notificación de contraseña
