--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -11740,7 +11740,7 @@ password-policy-enabled=पासवर्ड पॉलिसी सक्षम
 password-policy-enabled-help=पोर्टल पासवर्ड पॉलिसी के बजाय एलडीएपी की पासवर्ड पॉलिसी का उपयोग करने के लिए इसे सही करें। यदि सही सेट किया जाता है, तो यह संभव है कि पोर्टल जनित पासवर्ड एलडीएपी नीति से मेल नहीं खाएंगे। इन पासवर्ड को उत्पन्न करने में रेगएक्सपीटूलिट को कॉन्फ़िगर करने पर विवरण के लिए "पासवर्ड.रेगएक्सपोलिट.*" गुण देखें। ध्यान दें कि यदि यह सक्षम है, तो पोर्टल वैध पासवर्ड, समाप्त हो चुके पासवर्ड या लॉक किए गए उपयोगकर्ताओं की जांच नहीं करेगा। इसे अब एलडीएपी सर्वर की पासवर्ड पॉलिसी द्वारा संभाला जाता है। (Automatic Translation)
 password-recovery-is-disabled=पासवर्ड रिकवरी अक्षम है। (Automatic Translation)
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
-password-reminder=Password Reminder (Automatic Copy)
+password-reminder=पासवर्ड रिमाइंडर
 password-reset-notification=पासवर्ड परिवर्तित अधिसूचना
 password-reset-required=पासवर्ड Reset Required
 password-sent-email=पासवर्ड Sent Email
