--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -11740,7 +11740,7 @@ password-policy-enabled=Włączone zasady haseł (Automatic Translation)
 password-policy-enabled-help=Ustaw to na true, aby używać zasad haseł LDAP zamiast zasad haseł portalu. Jeśli ustawiona na true, jest możliwe, że hasła generowane przez portal nie będą zgodne z zasadami LDAP. Zobacz właściwości "passwords.regexptoolkit.*", aby uzyskać szczegółowe informacje na temat konfigurowania programu RegExpToolkit podczas generowania tych haseł. Należy zauważyć, że jeśli ta opcja jest włączona, portal nie będzie sprawdzał prawidłowych haseł, wygasłych haseł ani użytkowników, którzy są zablokowani. Jest to teraz obsługiwane przez zasady haseł serwera LDAP. (Automatic Translation)
 password-recovery-is-disabled=Odzyskiwanie hasła jest wyłączone. (Automatic Translation)
 password-recovery-question-and-answer=Password Recovery Question and Answer (Automatic Copy)
-password-reminder=Password Reminder (Automatic Copy)
+password-reminder=Przypominacz haseł
 password-reset-notification=Powiadomienie o resetowaniu hasła
 password-reset-required=Wymagany reset hasła
 password-sent-email=E-mail o wysłaniu hasła
