LPS-77699 Update Translations

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -288,7 +288,7 @@ action.ADD_INSTANCE=Ajouter une instance
 action.ADD_ITEM=Ajouter un élément
 action.ADD_KB_ARTICLE=Ajouter un article
 action.ADD_KB_FOLDER=Ajouter dossier
-action.ADD_KB_TEMPLATE=Ajouter un gabarit
+action.ADD_KB_TEMPLATE=Ajouter un modèle
 action.ADD_LAYOUT=Ajouter une page
 action.ADD_LAYOUT_BRANCH=Ajouter une variante de page
 action.ADD_LAYOUT_PAGE_TEMPLATE_COLLECTION=Ajouter la collection de modèles de page de format
@@ -462,7 +462,7 @@ action.SUBMIT=Envoyer
 action.SUBSCRIBE=Souscrire
 action.TRANSLATE=Traduire
 action.UNASSIGN=Annuler l'Affectation
-action.UNLINK_LAYOUT_SET_PROTOTYPE=Modèle de site publique
+action.UNLINK_LAYOUT_SET_PROTOTYPE=Dissocier le modèle de site
 action.UPDATE=Mettre à jour
 action.UPDATE_DISCUSSION=Mettre à jour la discussion
 action.UPDATE_KB_ARTICLES_PRIORITIES=Mettre à jour les priorités des articles
@@ -596,7 +596,7 @@ activity-knowledge-base-admin-add-kb-article-in={1} a écrit un nouvel article, 
 activity-knowledge-base-admin-add-kb-comment={1} a écrit un nouveau commentaire, {2}.
 activity-knowledge-base-admin-add-kb-comment-in={1} a écrit un nouveau commentaire, {2}, dans {0}.
 activity-knowledge-base-admin-add-kb-template={1} a écrit un nouveau modèle, {2}.
-activity-knowledge-base-admin-add-kb-template-in={0} a écrit un nouveau gabarit, {1}, dans {0}.
+activity-knowledge-base-admin-add-kb-template-in={0} a écrit un nouveau modèle, {1}, dans {0}.
 activity-knowledge-base-admin-move-kb-article={1} a déplacé un article, {2}.
 activity-knowledge-base-admin-move-kb-article-in={2} a déplacé un article, {1}, dans {0}.
 activity-knowledge-base-admin-update-kb-article={1} a actualisé un article, {2}.
@@ -1397,7 +1397,7 @@ an-error-occurred-while-parsing-the-token-from-the-openid-connect-provider=Une e
 an-error-occurred-while-parsing-your-xml-please-check-the-syntax-of-your-xml=Une erreur s'est produite durant l'analyse de votre fichier XML. Veuillez vérifier la syntaxe de votre fichier XML.
 an-error-occurred-while-processing-the-report=Une erreur est survenue lors du traitement du rapport.
 an-error-occurred-while-processing-the-requested-resource=Une erreur s'est produite lors du traitement de la ressource demandée.
-an-error-occurred-while-processing-the-template=Une erreur s'est produite lors du traitement du gabarit.
+an-error-occurred-while-processing-the-template=Une erreur s'est produite lors du traitement du modèle.
 an-error-occurred-while-processing-your-payment=Une erreur est survenue lors du traitement de votre paiement.
 an-error-occurred-while-processing-your-xml-and-xsl=Une erreur s'est produite lors du traitement vos fichiers XML et XSL.
 an-error-occurred-while-resetting-your-preferences=Une erreur s'est produite lors de la remise à zéro de vos préférences.
@@ -3045,7 +3045,7 @@ changing-templates-could-lose-unsaved-data-do-you-want-to-proceed=Modifier les m
 changing-the-display-page-template-will-affect-all-web-content-article-versions-even-when-saving-it-as-a-draft=La modification du modèle de page d'affichage affectera toutes les versions d'article de contenu web, même lors de son enregistrement en tant que brouillon.
 changing-the-document-type-will-cause-data-loss=Changer le type de document entraînera une perte de données et il ne sera pas possible de le récupérer. Voulez-vous vraiment modifier le type de document ?
 changing-the-friendly-url-will-affect-all-web-content-article-versions-even-when-saving-it-as-a-draft=Modifier l'URL simplifiée affectera toutes les versions des articles du contenu web, même si vous enregistrer en tant que brouillon.
-changing-the-language-does-not-automatically-translate-the-existing-template-script=Lors du changement de langue, le script du gabarit ne sera pas automatiquement traduit. Enregistrer avant le changement de langue pour pouvoir utiliser la palette.
+changing-the-language-does-not-automatically-translate-the-existing-template-script=Lors du changement de langue, le script du modèle ne sera pas automatiquement traduit. Enregistrer avant le changement de langue pour pouvoir utiliser la palette.
 changing-the-order-of-the-categories-is-not-supported=Le changement d'ordre des catégories n'est pas supporté.
 changing-the-template-will-not-affect-the-original-web-content-default-template.-the-change-only-applies-to-this-web-content-display=Changer le modèle <strong>n'affectera pas le modèle par défaut des contenus Web d'origine</strong>. <strong>La modification ne s'appliquera qu'à cet affichage de contenu web</strong>.
 changing-the-value-of-this-field-reloads-the-page=Le changement de la valeur de ce champ rechargera la page.
@@ -3131,7 +3131,7 @@ check-sla-job-interval-description=Définissez l'intervalle des jobs en minutes.
 check-temporary-booked-quantity-interval=Vérifier l'intervalle de quantité réservée temporaire
 check-the-list-of-violated-rules-highlighted-on-the-page=Vérifier la liste des règles enfreintes mises en évidence sur la page.
 check-this-if-dynamic-data-mapping-structure-keys-should-always-be-autogenerated=Vérifier ceci si les clés de la structure du mapping de données dynamique doivent toujours être auto-générées.
-check-this-if-dynamic-data-mapping-template-keys-should-always-be-autogenerated=Vérifier ceci si les clés de gabarit de nappage de données dynamique doivent toujours être auto-générées.
+check-this-if-dynamic-data-mapping-template-keys-should-always-be-autogenerated=Cocher ceci si les clés de modèle de nappage de données dynamique doivent toujours être auto-générées.
 check-this-if-structure-keys-should-always-be-autogenerated=Vérifier ceci si les clés de structure doivent toujours être auto-générées.
 check-this-if-template-keys-should-always-be-autogenerated=Vérifier ceci si les clés de modèle doivent toujours être auto-générées.
 check-threshold=Vérifier le seuil
@@ -4780,7 +4780,7 @@ data-definitions=Définitions des données
 data-is-importing.-you-can-safely-close-the-dialog=Les données sont importées. Vous pouvez fermer la boîte de dialogue en toute sécurité.
 data-list-description=Description de la liste de données
 data-list-description-help=Représente la description de la liste de données.
-data-list-display-template-helper=Assistant de gabarit d'affichage de liste de données
+data-list-display-template-helper=Assistant de modèle d'affichage de liste de données
 data-list-id=Identifiant de la liste de données
 data-list-id-help=Représente l'identifiant numérique de la liste de données.
 data-list-name=Nom de la liste de données
@@ -9334,7 +9334,7 @@ manage-sites=Gérer sites
 manage-task=Gestion des tâches
 manage-tax-categories=Gérer les catégories de taxe
 manage-teams=Gestion des équipes
-manage-templates=Gérer les gabarits
+manage-templates=Gérer les modelés
 manage-translations=Gérer les traductions
 manage-users=Gérer les utilisateurs
 manage-widget-templates=Gérer les modèles de widget
@@ -9731,7 +9731,7 @@ metadata.MSOffice.PRESENTATION_FORMAT=Format de présentation
 metadata.MSOffice.REVISION_NUMBER=Numéro de révision
 metadata.MSOffice.SECURITY=Sécurité
 metadata.MSOffice.SLIDE_COUNT=Nbr. de diapositives
-metadata.MSOffice.TEMPLATE=Gabarit
+metadata.MSOffice.TEMPLATE=Modèle
 metadata.MSOffice.TOTAL_TIME=Temps total
 metadata.MSOffice.VERSION=Version
 metadata.MSOffice.WORD_COUNT=Nbr. de mots
@@ -10059,7 +10059,7 @@ model.resource.com.liferay.dynamic.data.lists=Listes
 model.resource.com.liferay.dynamic.data.lists.model.DDLRecord=Enregistrement de listes de données dynamiques
 model.resource.com.liferay.dynamic.data.lists.model.DDLRecordSet=Ensemble d'enregistrement de liste de données dynamiques
 model.resource.com.liferay.dynamic.data.lists.model.DDLRecordSet-com.liferay.dynamic.data.mapping.model.DDMStructure=Définition de listes de données dynamiques
-model.resource.com.liferay.dynamic.data.lists.model.DDLRecordSet-com.liferay.dynamic.data.mapping.model.DDMTemplate=Gabarit de listes de données dynamiques
+model.resource.com.liferay.dynamic.data.lists.model.DDLRecordSet-com.liferay.dynamic.data.mapping.model.DDMTemplate=Modèle de listes de données dynamiques
 model.resource.com.liferay.dynamic.data.mapping=Mappage des données dynamiques
 model.resource.com.liferay.dynamic.data.mapping.model.DDMDataProviderInstance=Cartographie des données dynamiques exemple de fournisseur de données
 model.resource.com.liferay.dynamic.data.mapping.model.DDMFormInstance=Instance de formulaire
@@ -10188,7 +10188,7 @@ model.resource.com_liferay_portal_workflow_kaleo_forms_web_portlet_KaleoFormsDis
 models=Modèles
 moderate=Modérer
 modifiable=Modifiable
-modifiable-help=Les administrateur de page qui utilisent ce gabarit de page sont seulement capable de modifier dans les sections marquées comme modifiables.
+modifiable-help=Les administrateur de page qui utilisent ce modèle de page sont seulement capable de modifier dans les sections marquées comme modifiables.
 modification-conflict=Conflit de modification
 modification-conflicts-with-a-deletion=La modification est en conflit avec une suppression.
 modification-deletion-conflict=Conflit de suppression modification
@@ -10470,7 +10470,7 @@ new-experience=Nouvelle expérience
 new-export=Nouvel export
 new-export-based-on-x=Nouvel export basé sur {0}
 new-export-process=Nouveau processus d'export
-new-export-template=Nouveau gabarit d'export
+new-export-template=Nouveau modèle d'export
 new-feed=Nouveau fil
 new-field=Nouveau champ
 new-file-shortcut=Ajouter un raccourci de dossier
@@ -10524,7 +10524,7 @@ new-product=Produit
 new-property=Nouvelle propriété
 new-publish-process=Nouveau processus de publication
 new-publish-process-based-on-x=Nouveau processus de publication basé sur {0}
-new-publish-template=Nouveau gabarit de publication
+new-publish-template=Nouveau modèle de publication
 new-question=Nouvelle question
 new-ranking=Nouveau classement
 new-redirect=Nouvelle redirection
@@ -11620,7 +11620,7 @@ page-template-set=Ensemble de modèles de page
 page-template-sets=Ensembles de modèles de page
 page-template-sets-are-needed-to-create-page-templates=Des ensembles de modèles de page sont nécessaires pour créer des modèles de page.
 page-template-thumbnail=Vignette du modèle de page
-page-templates=Gabarits de page
+page-templates=Modèles de page
 page-templates-x=Modèles de page ({0})
 page-title=Titre de la page
 page-toolbar=Barre d'outils des pages
@@ -12308,7 +12308,7 @@ please-select-an-existing-price-list-or-promotion=Veuillez sélectionner une lis
 please-select-an-existing-sample-file=Veuillez sélectionner un fichier d'échantillon existant.
 please-select-an-existing-small-image=Veuillez sélectionner un image vignette existante.
 please-select-an-existing-structure=Veuillez sélectionner une structure existante.
-please-select-an-existing-template=Veuillez sélectionner un gabarit existant.
+please-select-an-existing-template=Veuillez sélectionner un modèle existant.
 please-select-an-existing-web-content=Veuillez sélectionner un contenu web existant.
 please-select-an-existing-web-content-or-enter-terms-of-use-content=Veuillez sélectionner un contenu web existant ou saisir le contenu des conditions d'utilisation.
 please-select-an-offering=Veuillez choisir une offre.
@@ -12507,7 +12507,7 @@ portlet-plugin=Plugin d'application
 portlet-plugins=Plugins d'application
 portlet-preferences=Préférences de l'application
 portlet-preferences-are-not-configured-properly=Les préférence de portlet ne sont pas configurées proprement.
-portlet-preferences-help=Représente les préférences de l'application qui seront utilisées pour afficher du contenu au travers de ce modèle. Utiliser l'API plus de gabarit de langue sélectionnée pour récupérer les valeurs des préférences.
+portlet-preferences-help=Représente les préférences de l'application utilisées pour afficher le contenu via ce modèle. Utilisez l'API de carte du langage de modèle sélectionné pour obtenir les valeurs des préférences.
 portlet-preview=Prévisualisation de la portlet
 portlet-setup-show-borders-default=Afficher les bordures de portlet par défaut
 portlet-title=Titre de portlet
@@ -12861,8 +12861,8 @@ publish-permissions=Publier les Autorisations
 publish-permissions-by-default=Publier les permissions par défaut
 publish-permissions-by-default-help=Si cette option est cochée, les permissions assignées aux pages exportées et aux fenêtres de portlet individuelles sont toujours incluses par défaut.
 publish-portlets=Publier les portlets
-publish-templates=Gabarits de publication
-publish-templates-can-be-administered-in-the-control-menu=Gabarits de publication peuvent être administrés dans le menu de contrôle.
+publish-templates=Modèles de publication
+publish-templates-can-be-administered-in-the-control-menu=Les modèles de publication peuvent être administrés dans le menu de contrôle.
 publish-the-form-to-get-its-shareable-link=Publiez le formulaire pour obtenir son lien à partager.
 publish-this-form=Publier ce formulaire.
 publish-to-live=Publier sur le site
