--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -3763,7 +3763,7 @@ configure-this-application=このアプリケーションを設定する。
 configure-this-application-and-place-it-where-desired-on-the-page=このアプリケーションを設定し、ページに配置する。
 configure-x={0} を設定します。
 configured-database=設定されたデーターベース
-configured-from=設定元
+configured-from=設定元:
 configures-whether-a-guest-may-checkout-by-providing-an-email-address-or-if-they-must-sign-in=ログインが必要な場合にゲストがメールアドレスを入力してチェックアウトできるかどうかを設定します。
 configures-whether-an-order-requested-delivery-date-can-be-set-during-checkout=チェックアウト時に注文品の希望配達日を設定できるかどうかを構成します。
 configures-whether-an-shipping-price-of-zero-is-shown-during-the-shipping-method-selection-checkout-screen=チェックアウト中に配送方法を選択する際にゼロの送料を表示するかどうかを構成します。
