--- a/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-customer-portal/extra/remote-app/src/common/I18n/Language_ja_JP.json
+++ b/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-customer-portal/extra/remote-app/src/common/I18n/Language_ja_JP.json
@@ -8,8 +8,8 @@
 	"activation-key-was-generated-successfully": "ライセンス認証キーが正常に生成されました",
 	"activation-keys": "ライセンス認証キー",
 	"activation-keys-were-deactivated-successfully": "ライセンス認証キーが正常に無効化されました",
-	"activation-keys-will-be-valid-indefinitely-starting-x-or-until-manually-deactivated": "ライセンス認証キーは {0}以降または手動で無効化されるまで無期限に有効になります。",
-	"activation-keys-will-be-valid-x-x": "ライセンス認証キーは {0}から {1} まで有効です",
+	"activation-keys-will-be-valid-indefinitely-starting-x-or-until-manually-deactivated": "ライセンス認証キーは {0} 以降または手動で無効化されるまで無期限に有効になります。",
+	"activation-keys-will-be-valid-x-x": "ライセンス認証キーは {0} から {1} まで有効です",
 	"activation-status": "ライセンス認証ステータス",
 	"active": "有効",
 	"add-activation-key": "ライセンス認証キーの追加",
@@ -23,11 +23,11 @@
 	"administrator-roles": "管理者ロール",
 	"aggregate-key-single-file": "集約キーの単一ファイル",
 	"all": "すべて",
-	"all-projects": "All projects",
+	"all-projects": "すべてのプロジェクト",
 	"allowed-email-domains": "許可メールドメイン",
 	"almost-there-setup-analytics-cloud-by-finishing-the-activation-form": "あと少しです！ライセンス認証フォームに記入して Analytics Cloud をセットアップしてください",
 	"almost-there-setup-experience-cloud-by-finishing-the-activation-form": "あと少しです！ライセンス認証フォームに記入して Experience Cloud をセットアップしてください。",
-	"almost-there-setup-lxc-sm": "Almost there! Setup LXC - SM",
+	"almost-there-setup-lxc-sm": "あと少しです！LXC - SM",
 	"an-unexpected-error-occurred": "予期しないエラーが発生しました。",
 	"analytics-cloud": "Analytics Cloud",
 	"analytics-cloud-activation": "Analytics Cloud のライセンス認証",
@@ -44,7 +44,7 @@
 	"backup": "バックアップ",
 	"belgium": "ベルギー",
 	"brazil": "ブラジル",
-	"by-finishing-the-activation-form": "by finishing the activation form.",
+	"by-finishing-the-activation-form": "をセットアップするためライセンス認証フォームに記入してください。",
 	"cancel": "キャンセル",
 	"chicago": "シカゴ",
 	"china": "中国",
@@ -68,7 +68,7 @@
 	"csp": "CSP",
 	"csp-up-to-10-k-users": "CSP - 最大 10,000 ユーザー",
 	"current": "現在",
-	"danger": "Danger",
+	"danger": "危険",
 	"data-center-location": "データセンターの場所",
 	"deactivate": "無効化",
 	"deactivate-dxp-activation-keys": "DXP ライセンス認証キーの無効化",
@@ -102,9 +102,9 @@
 	"environment-details": "環境の詳細",
 	"environment-name": "環境名",
 	"environment-type": "環境タイプ",
-	"environments-are-being-set-up-and-will-be-available-soon": "environments are ready. Go to the Product Console to view DXP Cloud details.",
-	"environments-are-ready-go-to-the-product-console-to-view-lxc-sm-details": "environments are ready. Go to the Product Console to view DXP Cloud details.",
-	"error": "Error",
+	"environments-are-being-set-up-and-will-be-available-soon": "環境の準備ができました。DXP Cloud の詳細を確認するには、製品コンソールに移動してください。",
+	"environments-are-ready-go-to-the-product-console-to-view-lxc-sm-details": "環境の準備ができました。DXP Cloud の詳細を確認するには、製品コンソールに移動してください。",
+	"error": "エラー",
 	"exp-date": "有効期限",
 	"expiration-date": "有効期限",
 	"expired": "期限切れ",
@@ -158,7 +158,7 @@
 	"ireland": "アイルランド",
 	"italy": "イタリア",
 	"japan": "日本",
-	"jurong-west-singapore": "Jurong West, Singapore",
+	"jurong-west-singapore": "ジュロン・ウエスト、シンガポール",
 	"key-activation-available-x-of-x": "キーを有効化可能: {0} / {1}",
 	"key-activations-available": "キーを有効化可能",
 	"key-type": "キータイプ",
@@ -183,7 +183,7 @@
 	"luxembourg": "ルクセンブルク",
 	"lxc-project-id": "LXC プロジェクト ID",
 	"lxc-sm": "LXC - SM",
-	"lxc-sm-is-the-abbreviation-of-liferay-experience-cloud-self-managed": "LXC - SM is the abbreviation of Liferay Experience Cloud - Self-Managed",
+	"lxc-sm-is-the-abbreviation-of-liferay-experience-cloud-self-managed": "LXC - SM は Liferay Experience Cloud - Self-Managed の略称です",
 	"lxc-sm-setup": "LXC - SM セットアップ",
 	"mac-address": "MAC アドレス",
 	"mac-addresses": "MAC アドレス",
@@ -202,7 +202,7 @@
 	"netherlands": "オランダ",
 	"next": "次へ",
 	"no-activation-keys-found-with-this-search-criteria": "この検索条件に一致するライセンス認証キーが見つかりません",
-	"no-projects-match-that-name": "No projects match that name",
+	"no-projects-match-that-name": "その名前に一致するプロジェクトがありません",
 	"no-projects-match-these-criteria": "これらの条件に一致するプロジェクトがありません",
 	"no-subscriptions-match-these-criteria": "これらの条件に一致するサブスクリプションがありません。",
 	"non-prod": "非本番",
@@ -312,7 +312,7 @@
 	"subscription-term": "サブスクリプションの期間",
 	"subscription-terms": "サブスクリプションの期間",
 	"subscriptions": "サブスクリプション",
-	"success": "Success",
+	"success": "成功",
 	"support-level": "サポートレベル",
 	"support-region": "サポート地域",
 	"support-seat": "サポートシート",
@@ -388,7 +388,7 @@
 	"your-experience-cloud-project-is-being-set-up-and-will-be-available-soon": "Experience Cloud のプロジェクトはセットアップ中です。まもなく使用できるようになります。",
 	"your-liferay-experience-cloud-environments-are-ready": "Liferay Experience Cloud 環境の準備ができました",
 	"your-liferay-experience-cloud-workspace-will-be-provisioned-in-1-2-business-days-an-email-will-be-sent-once-your-workspace-is-ready": "Liferay Experience Cloud のワークスペースは1 〜 2 営業日でプロビジョニングされ、ワークスペースの準備ができると送信されます",
-	"your-lxc-sm": "Your LXC - SM",
+	"your-lxc-sm": "あなたの LXC - SM",
 	"your-lxc-sm-environments-are-being-set-up-and-will-be-available-soon": "LXC - SM のワークスペースはセットアップ中です。まもなく使用できるようになります。",
 	"your-lxc-sm-environments-are-ready": "LXC - SM 環境の準備ができました。",
 	"your-lxc-sm-environments-are-ready-go-to-the-product-console-to-view-lxc-sm-details": "LXC - SM 環境の準備ができました。LXC - SM の詳細を確認するには、製品コンソールに移動してください。",
